# python_automation_template_ctk

./: .gitignore  README.md  app.py  pyproject.toml  pytest.ini
python_automation_template_ctk/: __init__.py  application.py  constants.py  logging_config.py  utils.py
python_automation_template_ctk/controllers/: base_controller.py  instrument_controller.py
python_automation_template_ctk/models/: base.py  fields.py
python_automation_template_ctk/pages/: instrument_page.py
python_automation_template_ctk/views/: __init__.py  base_page.py  dialogs.py  widgets.py
