[tool.poetry]
name = "python_automation_template"
version = "0.0.0"
description = "A template project for Python automation GUI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools_scm]
write_to = "python_automation_template/_version.py"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
strict_optional = true
warn_unused_configs = true

[tool.mypy.serial]
ignore_missing_imports = true

[tool.mypy."python_automation_template.*"]
ignore_missing_imports = false

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.isort]
profile = "black"
